@@ -1,0 +1,8 @@
+# PPC G4 on MacOS X 10.2
+TARGETOS = powerpc-apple-darwin6.5
+HOSTOS = powerpc-apple-darwin6.5
+
+SDCCCONFIGUREFLAGS = --disable-ucsim
+
+TARGETCC  = gcc2
+TARGETCXX = g++2
