@@ -1,3 +1,7 @@
+2003-05-01  Bernhard Held <bernhard@bernhardheld.de>
+
+	* local/ucf-cf-ppc-macosx-2.mk: added
+
 2003-04-28  Bernhard Held <bernhard@bernhardheld.de>
 
 	* lib/src-archive.mk: added directory sdcc to root of archive
